Fix up tests so we can run newer versions of freecad (maybe, someday)

--- a/nose2.cfg
+++ b/nose2.cfg
@@ -8,6 +8,15 @@ coverage-report =
     term
     html
     xml
+coverage = src/kb_builder/__init__.py
+           src/kb_builder/builder.py
+           src/kb_builder/functions.py
+           src/kb_builder/test_all_features_poker.py
+           src/kb_builder/test_all_features_sandwich.py
+           src/kb_builder/test_all_shapes.py
+           src/kb_builder/test_bevel.py
+           src/kb_builder/test_functions.py
+           src/kb_builder/test_numpad.py
 
 [log-capture]
 always-on = True
